--- a/bundle/cordova-app-loader/update.html
+++ b/bundle/cordova-app-loader/update.html
@@ -22,7 +22,9 @@
                     // gets loaded from application bundle. i get absolute file path to cordova.js and save it 
                     // into localStorage so that later when i load pages from internal device storage 
                     // i have absolute path to the cordova.js in the bundle and can load it.
-                    var cordovaJsPath = localStorage.getItem('cordovaJsPath') || '';
+                    var cordovaJsPath = localStorage.getItem('cordovaJsPath') 
+                        || window.location.href.substring(
+                            0, window.location.href.indexOf('/cordova-app-loader/update.html') + 1);
                     document.write('<script src="' + cordovaJsPath + 'cordova.js" type="text\/javascript"><\/script>');
                 }
             })();
@@ -35,8 +37,8 @@
                 <!-- i call it 'Synchronization' here instead of 'Update' because Apple doesn't like updates 
                      inside application. so ok... it's not an update, i just synchronize my files with my server. -->
                 <h2>Synchronization...</h2>
-                <p id="step">Step 1/3</p>
-                <p id="progress">0%</p>
+                <p><span id="step">Step 1/3</span><span id="progress">0%</span></p>
+                
                 <p>Please wait.</p>
             </div>
             <div id="error">
@@ -46,7 +48,7 @@
             </div>
         </div>
         <script src="bluebird.min.js" type="text/javascript"></script>
-        <script src="CordovaPromiseFs.js" type="text/javascript"></script>
+        <script src="CordovaPromiseFS.js" type="text/javascript"></script>
         <script src="cordova-app-loader.js" type="text/javascript"></script>
         <script src="update.js" type="text/javascript"></script>
     </body>
